Fix the video display issue on mobile

--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ h1 {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  flex-direction: row-reverse;
   margin-top: -2em;
 }
 
@@ -200,4 +201,20 @@ h1 {
 #footer-logo {
   height: 100%;
   width: auto;
+}
+
+@media screen and (max-width: 1080px) {
+  #video-right {
+    text-align: center;
+    width: 90%;
+    margin-top: 5em;
+  }
+
+  .main-container > div.center {
+    flex-wrap: wrap !important;
+  }
+
+  .main-container {
+    height: 50em;
+  }
 }
